--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "cors": "^2.8.4",
+    "express": "^4.16.4",
+    "mongoose": "^5.3.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
